Fixed overlapping contextmenu issues

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -62,6 +62,7 @@
         & > ul {
           display: none;
           position: absolute;
+          z-index: 10;
           left: 100%;
           top: 0;
 
